Override destroy-function in Deployment-model to assign ?force=true url-parameter with options.stopForce. Removed extra margin for .list-inline.

--- a/src/main/resources/assets/css/marathon.css
+++ b/src/main/resources/assets/css/marathon.css
@@ -157,14 +157,6 @@ a,
   border-color: #3d4045;
 }
 
-.list-inline > li {
-  margin-right: 10px;
-}
-
-.list-inline > li:last-child {
-  margin-right: 0px;
-}
-
 .list-inline-subtext {
   color: #6f757D;
   display: inline-block;
